--- a/webside/index.html
+++ b/webside/index.html
@@ -18,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-     <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
+     <link href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
 
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -646,7 +646,7 @@ function carousel() {
           <h2 class="mb-4">The Recommendation engine</h2>
           <hr class="my-4">
         
-            <p> Insert a movie that you like and we will find similar movies for you. If you either do not like any of the recommendation or if you have seen any of these movies then you can always delete the movie from the list and we will find another movie for you</p>  
+            <p> Insert a movie that you like and we will find similar movies for you. If you either do not like any of the recommendation or if you have seen any of these movies then you can always remove the movie from the list and we will find another movie for you!</p>  
           </div>
               <div class="search" style="margin-bottom:14%">
               
