--- a/webside/index.html
+++ b/webside/index.html
@@ -278,11 +278,11 @@
           </div>
 
           <div class="col-lg-6 text-center">
-            <img class="img-fluid" src="/img/imdb_rating.PNG" alt="">
+            <img class="img-fluid" src="img/imdb_rating.png" alt="">
           </div>
 
            <div class="col-lg-6 text-center">
-            <img class="img-fluid" src="/img/imdb_similarity.PNG" alt="">
+            <img class="img-fluid" src="img/imdb_similarity.png" alt="">
           </div>
 
 
