--- a/website/index.html
+++ b/website/index.html
@@ -504,7 +504,7 @@ function carousel() {
 
           <div class="text-center">
 
-           <h4 class="mb-4">Some final thoughts in the end</h4>
+           <h4 class="mb-4">Some final thoughts</h4>
 
           <p> 
           We did a lot of analysis on the manuscripts, the initial idea was to use these findings as a variable into the recommendation engine. We did not manage to find manuscripts for all of the movies in our dataset and therefore we did not think that it would be a good idea to use this information in the recommendation engine. What we did instead was to scrape the movie's storylines from IMDb and use similarity measures on them as a variable into our recommendation engine which resulted in a improved recommendation engine.
