--- a/website/index.html
+++ b/website/index.html
@@ -585,7 +585,7 @@ function carousel() {
           </div>
 
           <div class="col-lg-12 text-center">
-            <img class="img-fluid" src="img/main_network1.PNG" alt="">
+            <img class="img-fluid" src="img/main_network1.png" alt="">
           </div>
 
 
@@ -611,12 +611,12 @@ function carousel() {
 
 
           <div class="col-lg-12 text-center">
-            <img class="img-fluid" src="img/main_network_communities_giant.PNG" alt="">
+            <img class="img-fluid" src="img/main_network_communities_giant.png" alt="">
           </div>
 
 
           <div class="col-lg-12 text-center">
-            <img class="img-fluid" src="img/communities.PNG" alt="">
+            <img class="img-fluid" src="img/communities.png" alt="">
           </div>
 
           <!-- now that we have used up all the 12 coloumbs in this row , lets go create a new "row class" , Alas in the same container -->
