--- a/website/index.html
+++ b/website/index.html
@@ -427,9 +427,11 @@ function carousel() {
     
 
     <section class="bg-dark text-white" id = "Sentimental">
-
+    <div class="container">
+        <div class="text-center">
         <h2 class="mb-4">Text Analysis</h2>
         <hr class="my-4">
+        </div>
         <div class="row">
         
         <p>The initial idea was to find manuscripts for all of the 5000 movies from the Kaggle dataset. Then analyze these manuscripts and calculate both similarities between movies and sentiment score for each movie. This information could then be fed to the recommendation engine as two variables. This would help the engine distinguish between happy and sad movies. Furthermore, the similarity measure could help the recommendation engine to find movies with similar vocabulary. </p>
