--- a/website/index.html
+++ b/website/index.html
@@ -647,7 +647,7 @@ function carousel() {
                 <li>Last but not least, we needed to handle the fact that some movies (nodes) do not have any links. However, we still want to recommend movies when people like to find similar movies to them. In this case we depend only on the IMDb rating and the similarity between the movies' storylines. Thus we will only recommend a movie which should be somewhat similar and has a good IMDb rating.   </li>
             </ul>
 
-            There you have it, after having executed these steps we have created a recommendation engine that works quite will in our opinion. You can try it out for yourself in the following section. If you want to dig deeper into the analysis and the code behind the engine you can check out our 
+            There you have it, after having executed these steps we have created a recommendation engine that works quite well in our opinion. You can try it out for yourself in the following section. If you want to dig deeper into the analysis and the code behind the engine you can check out our 
             <a class = "makeWhite" href="https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/explainer_notebook.ipynb">
                   <span class="download">explanatory notebook.</span>
                 </a>
